Realizado melhorias nas exceções e adicionado documentação swagger
